--- a/assets/css/layout/_default/single.css
+++ b/assets/css/layout/_default/single.css
@@ -15,7 +15,7 @@
 
 .subtitle {
     opacity: 0.86;
-    margin: 0;
+    margin: 1ex 0 0;
     font-style: italic;
 }
 
